Facebook IE fix, fix for header to be text align centered.

--- a/module/dvs/static/css/default/default/showroom.css
+++ b/module/dvs/static/css/default/default/showroom.css
@@ -90,6 +90,12 @@ header a
 	margin: auto;
 }
 
+header h1
+{
+	width: 100%;
+	text-align: center;
+}
+
 /* Top Navigation */
 
 header nav {
